--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # API Configuration
-COLIVARA_API_KEY=your_api_key_here
+COLIVARA_API_KEY=A2rAPBQBFoQ6VYGXasJrTeVHt34xJJn7
 COLIVARA_ENDPOINT=https://api.colivara.ai/v1
 
 # Hardware Configuration
-USE_GPU=true  # Set to false for CPU-only mode
+USE_GPU=false  # Set to false for CPU-only mode
 
 # Authentication for protected websites (optional)
 AUTH_USERNAME=
